# Vara-Tickiting

./: Cargo.toml  README.md  build.rs  package.json
app/: Cargo.toml
app/src/: lib.rs
app/src/services/: mod.rs
app/src/services/audience/: funcs.rs  mod.rs
app/src/services/common/: mod.rs
app/src/services/events/: funcs.rs  mod.rs
app/src/services/funds/: func.rs  mod.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
frontend/: package.json  tsconfig.json
frontend/src/: app1.js  app2.js  global.d.ts  lib.js  lib1.js
src/: lib.rs
tests/: gtest.rs
