[workspace]

members = ["client"]


[package]
name = "vara-ticket"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = "1.7.0"
parity-scale-codec = { version = "3.6.12", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
vara-ticket-app = { path = "app" }

[build-dependencies]
vara-ticket-app = { path = "app" }
sails-rs = { version = "0.7.1", features = ["wasm-builder"] }
sails-idl-gen = "0.7.1"

[dev-dependencies]
vara-ticket = { path = ".", features = ["wasm-binary"] }
vara-ticket-client = { path = "client" }
sails-rs = { version = "0.7.1", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
